kubernetes/catalog-deployment-config.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
 name: catalog-deployment

spec:

 replicas: 2

 selector:
   matchLabels:
     app: catalog

 template:

   metadata:

     labels:
       app: catalog

   spec:

     containers:

     - name: catalog

       image: catalog-service:v7

       imagePullPolicy: Never

       ports:

       - containerPort: 3000
