kubernetes/catalog-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
 name: catalog-deployment

spec:

 replicas: 2

 selector:
   matchLabels:
     app: catalog

 template:

   metadata:
     labels:
       app: catalog

   spec:

     containers:

     - name: catalog-container

       image: nkheria/catalog-service:v3

       imagePullPolicy: IfNotPresent

       ports:
       - containerPort: 3000
