kubernetes/catalog-ingress.yaml
apiVersion: networking.k8s.io/v1
 
kind: Ingress
 
metadata:
  name: catalog-ingress
 
spec:
 
  ingressClassName: nginx
 
  rules:
 
  - host: smartretail.local
 
    http:
 
      paths:
 
      - path: /
 
        pathType: Prefix
 
        backend:
 
          service:
 
            name: catalog-service
 
            port:
 
              number: 3000
